Update list layout
- Improved list item layout in searchview, watchlist and watchedlist

--- a/WatchList/app/src/main/res/values/strings.xml
+++ b/WatchList/app/src/main/res/values/strings.xml
@@ -15,6 +15,6 @@
     <string name="movieDescriptionLabelText">Description:</string>
     <string name="addToWatchListButtonText">Add to Watchlist</string>
     <string name="noInternetText">No internet connection</string>
-    <string name="removeFromWatchlistText">Remove from watchlist</string>
+    <string name="removeFromWatchlistText">Remove</string>
     <string name="watchedText">Watched</string>
 </resources>
